--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -223,3 +223,9 @@ footer nav ul {
 	background-color: #2a7f62;
 	color: white;
   }
+
+  .gallery img {
+	width: 366px;
+	height: 489px;
+	object-fit: cover; /* This makes sure the image fills the area and crops as needed */
+  }
